--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,9 @@ node_modules/
 .env.production
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Build output
 dist/
@@ -25,3 +23,7 @@ Thumbs.db
 # IDE
 .vscode/
 .idea/
+
+# Prisma
+prisma/*.db
+prisma/migrations/**/migration_lock.toml
