--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "build": "prisma generate",
+    "vercel-build": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
@@ -24,10 +26,13 @@
     "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "prisma": "^6.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "^6.5.0"
+    "nodemon": "^3.1.11"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
