Feature forgot password Profile and Change Password

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database (Prisma)
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?sslmode=require"
+DATABASE_URL="postgresql://neondb_owner:npg_Nln2yu0KFeEx@ep-late-block-adxv4ktp-pooler.c-2.us-east-1.aws.neon.tech/SKRDataBase?sslmode=require&channel_binding=require"
 
 # JWT
 JWT_SECRET=JAHJHfjdsertyjkejrwkermwekrj3453jsdkfjsdfjsfjsfowernjwensdf
@@ -11,19 +11,22 @@ JWT_ACCESS_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
 # Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CLIENT_ID=791546195844-cf4o0k0o3r908h04vqpkcaufb4289nl8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 GOOGLE_CALLBACK_URL=http://localhost:5000/api/auth/google/callback
 
 # Gmail SMTP
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USER=your-email@gmail.com
-MAIL_PASS=your-gmail-app-password
-MAIL_FROM=your-email@gmail.com
+MAIL_USER=hungnguyenames2003@gmail.com
+MAIL_PASS=fiqg iiiz oxeg whqj
+MAIL_FROM=hungnguyenames2003@gmail.com
 
 # OTP
 OTP_EXPIRES_IN_MINUTES=10
 
 # Frontend URL
 CLIENT_URL=http://localhost:5173
+
+# ImgBB (https://api.imgbb.com/)
+IMGBB_API_KEY=66c733f305e2cbbd55a3ab61e4ce9daa
